test/lambda/negative/syntax/unterminated_string.ls
// @expect-error: E105
// @description: Unterminated string literal

let x = "hello
